
2016-04-23  Brian Tiffin <btiffin@gnu.org>

	* common.h, numeric.c: 64bit unsigned treated as signed when long int
	  same size as long long.

2016-04-06  Brian Tiffin <btiffin@gnu.org>
	* common.c: Updated CBL_OC_HOSTED with tzname, timezone, daylight.

2016-03-29  Edward Hart <edward.dan.hart@gmail.com>

	* common.c (cob_set_exception), common.h, coblocal.h: made cob_set_
	  exception a public function for SET LAST EXCEPTION TO OFF. Also made
	  argument of 0 reset all exception information.

2016-03-28  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h, system.def: Added CBL_OC_HOSTED
	  feature-request #49.

2016-03-23  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c (numval): added missing NUMVAL-C-specific code I missed in
	  r793, causing bug #218.

2016-03-21  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_set_location, cob_trace_section, cob_exit_common): fix for
	  bug #216 - store a duplicate of cob_last_sfile for tracing, free on exit

2016-03-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* intrinsic.c (locale_time): consolidation still used sizeof(buff) after
	  buff changed from char [] to char *, fixed by introducing LOCTIME_BUFSIZE
	* intrinsic.c (cob_intr_lcl_time_from_secs) re-added missing exception

2016-03-12  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: consolidated copy-and-pasted code in numerous functions,
	  including: SUBSTITUTE(-CASE), NUMVAL(-C), VARIANCE and
	  LOCALE-TIME(-FROM-SECONDS).
	* intrinsic.c: renamed "xqtyear" variables to "current_year".

2016-02-21  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (set_config_val): removed use of cob_strcat for output of
	  possible values

2016-02-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (set_default_line_column): fixed bug #202 where screens
	  were displayed at the cursor position when no LINE or COL was given.
